# checkCalcCoverage

./: .coverage  .coveragec  .gitignore  Calcclass.py  Calclass.py  README.md  calcClass.py  coverage.json  coverage.xml  pyproject.toml  report  requeriments-lint.txt  requirements-test.txt  test_calc.py
.github/workflows/: coverage  coverage.xml  coverage.yml  coverageDiff.yml  learn-github-actions.yml  lint.yml  requeriments-doc.txt  requeriments.txt  test.yml
.github/workflows/test/: checkCalculator.py  test_calc.py
calclass/: Calcclass.py  Calcclass.py,cover  test_calc.py  toDel.txt
gitRunner/: .env  docker-compose.yml
mycalc/: __init__.py
src/learn_testing/: __init__.py
src/learn_testing/area/: calc_areas.py  exception_zero.py
src/learn_testing/calc/: calculator.py
src/learn_testing/mymates/: exception_list.py  list_mates.py
src/mycalc/: __init__.py  calc1.py  calc2.py  calc3.py  calc4.py  calc5.py  calcclass.py  calclass.py
test/: coverage.xml  test_area.py  test_calc.py  test_list.py
